--- a/src/main.css
+++ b/src/main.css
@@ -22,13 +22,9 @@
 
 .surface-view.ui.segment {
   padding: 0;
-  position: relative;
+  overflow: auto;
 }
 
 .surface-view-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  position: relative;
 }
